# lab1

./: CMakeLists.txt
working files/: func.cpp  func.h  main.cpp  trit.cpp  trit.h  tritproxy.cpp  tritset.cpp
working files/Test_classes/: Test_Tritproxy.cpp  Test_Tritproxy.h  Test_Tritset.cpp  Test_Tritset.h
